--- a/src/styles/pages/sites/[site_id]/visitors/_[visitor_id].scss
+++ b/src/styles/pages/sites/[site_id]/visitors/_[visitor_id].scss
@@ -1,6 +1,8 @@
 .page.sites.visitor {
   .visitor-view {
     .title {
+      margin-bottom: 3rem;
+
       i {
         color: var(--gray-500);
         margin-right: .5rem;
